Fix Z-Index for ActiveSelection & Add scroll to onboarding slides

--- a/src/App.css
+++ b/src/App.css
@@ -766,6 +766,8 @@ body {
   display: flex;
   flex-direction: column;
   padding-right: 12px;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .onboarding-icon-banner {
